Cambios en los textos de los modelos de marcas, Empleados, Articulos, Proveedores, Cafeteria, Campus y Tipos de usuarios estos cambios fueron los textos que estaban en ingles y un agregado de un dropdown que contenga los links para dirigirse a los cruds

--- a/CafeteriaUnapec/Views/Cafeteria/Delete.cshtml
+++ b/CafeteriaUnapec/Views/Cafeteria/Delete.cshtml
@@ -1,14 +1,11 @@
 ﻿@model CafeteriaUnapec.Models.Cafeteria
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>Eliminar registro de cafeteria</h2>
 <div>
-    <h4>Cafeteria</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -33,8 +30,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Volver", "Index")
         </div>
     }
 </div>
