--- a/CafeteriaUnapec/Views/Marcas/Index.cshtml
+++ b/CafeteriaUnapec/Views/Marcas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CafeteriaUnapec.Models.Marcas>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Marcas";
 }
 
 <h2>Registro de marcas</h2>
