--- a/CafeteriaUnapec/Views/UserTypes/Details.cshtml
+++ b/CafeteriaUnapec/Views/UserTypes/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model CafeteriaUnapec.Models.UserTypes
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<h2>Detalles de registros</h2>
 
 <div>
-    <h4>UserTypes</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +28,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Volver", "Index")
 </p>
